# DataGest

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  cli.py  mission.md  pyproject.toml
.github/workflows/: build.yml
packaging/: build.ps1  datagest.spec
scripts/: setup_server.py
src/: __init__.py  main.py  version.py
src/core/: __init__.py  api.py  config.py  credential_manager.py  dvc_manager.py  git_manager.py  lock_manager.py  protocols.py  registry.py  tool_bootstrap.py  workspace.py
src/models/: __init__.py  project.py  schemas.py
src/ui/: __init__.py  app.py  styles.py
src/ui/widgets/: __init__.py  dataset_detail.py  dataset_list.py  history_panel.py  import_dialog.py  log_viewer.py  options_dialog.py  progress_panel.py  project_list.py
src/utils/: __init__.py  file_utils.py  logging_setup.py  platform.py
src/workflows/: __init__.py  base.py  history_workflow.py  import_workflow.py  sync_workflow.py
templates/: dataset.yaml  registry.json
tests/: conftest.py  test_config.py  test_credential_manager.py  test_dvc_manager.py  test_git_manager.py  test_history_workflow.py  test_lock_manager.py  test_platform.py  test_protocols.py  test_registry.py  test_sync_workflow.py  test_tool_bootstrap.py  test_workflows.py  test_workspace.py
